<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".JavaClass.SignUp_UserVipActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUservip"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="Đăng ký thành viên vip"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:paddingLeft="30dp"/>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:background="@color/colorGreyDark"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="Cấp độ thành viên:"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_uservip1"
                    android:layout_marginTop="8dp"
                    android:text="Vip1 (100,000 VND/Tháng)"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/layout_vip1"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:background="@drawable/boder_layout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/textvip1_1"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip1_2"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip1_3"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip1_5"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <RadioButton
                    android:id="@+id/radio_uservip2"
                    android:layout_marginTop="8dp"
                    android:text="Vip2 (200,000 VND/Tháng)"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/layout_vip2"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:background="@drawable/boder_layout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/textvip2_1"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip2_2"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip2_3"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip2_4"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip1_5"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <RadioButton
                    android:id="@+id/radio_uservip3"
                    android:layout_marginTop="8dp"
                    android:text="Vip3/Salon (300,000 VND/Tháng)"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/layout_vip3"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:background="@drawable/boder_layout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/textvip3_1"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip3_2"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip3_3"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip2_4"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip3_4"
                        android:textSize="15dp"
                        android:textColor="#424242"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/textvip3_5"
                        android:textSize="15dp"
                        android:textColor="@color/colorReb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

</LinearLayout>