<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".JavaClass.CovenientServiceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarService"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="Dịch vụ tiện ích"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:paddingLeft="30dp"/>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGreyDark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="Các dịch vụ của CarCenter:"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:background="@drawable/boderedt"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/textmoney"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/textdk"
                    android:textSize="18dp"
                    android:textColor="@color/colorReb"
                    android:layout_marginLeft="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="- Mỗi lần chỉnh sửa tin tính phí 5,000 VNĐ"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/textupdate"
                    android:textSize="18dp"
                    android:textColor="@color/colorReb"
                    android:layout_marginLeft="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGreyDark"
                android:layout_marginTop="16dp"/>

            <TextView
                android:text="Phương thức thanh toán:"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="- Chuyển khoản qua tài khoản ngân hàng:"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text=" Người thụ hưởng:"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="Võ Quang Ánh"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Số tài khoản:"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="0201199899999"
                    android:textSize="16dp"
                    android:textColor="@color/colorBlue"
                    android:textStyle="bold"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="ngân hàng"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:text="MB Bank"
                    android:textColor="@color/colorBlue"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:text="chi nhanh Hưng Yên."
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Hoặc stk:"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="104867836290"
                    android:textSize="16dp"
                    android:textColor="@color/colorBlue"
                    android:textStyle="bold"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="ngân hàng"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:text="Viettin Bank"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:text="chi nhanh Hưng Yên."
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/contentbanking2"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>